syntax = "proto3";

package skywalking.v3;

option java_multiple_files = true;
option java_package = "top.kwseeker.communication.grpc.common.v3";

message KeyStringValuePair {
  string key = 1;
  string value = 2;
}