syntax = "proto3";

package skywalking.v3;

option java_multiple_files = true;
option java_package = "top.kwseeker.communication.grpc.language.agent.v3";

import "common/Common.proto";
import "common/Command.proto";

service TraceSegmentReportService {

  //双向流RPC模式
  rpc collect(stream SegmentObject) returns (stream Commands);

  //服务端流RPC模式
  rpc collectInSync(SegmentObject) returns (stream Commands);
}

message SegmentObject {
  //string traceId = 1;
  string traceSegmentId = 1;
  repeated SpanObject spans = 2;
  string service = 3;
  string serviceInstance = 4;
  bool isSizeLimited = 5;
}

message SpanObject {
  int32 spanId = 1;
  int32 parentSpanId = 2;
  int64 startTime = 3;
  int64 endTime = 4;
  //repeated SegmentReference refs = 5;
  string operationName = 6;
  //string peer = 7;
  SpanType spanType = 8;
  SpanLayer spanLayer = 9;
  //int32 componentId = 10;
  //bool isError = 11;
  repeated KeyStringValuePair tags = 12;
  //repeated Log logs = 13;
  //bool skipAnalysis = 14;
}

enum SpanType {
  Entry = 0;
  Exit = 1;
  Local = 2;
}

enum SpanLayer {
  Unknown = 0;
  Database = 1;
  RPCFramework = 2;
  Http = 3;
  MQ = 4;
  Cache = 5;
  FAAS = 6;
}